# Imaging-Instruments-lite

./: README.md  controller.py  main.py  main.spec  models.py  requirements.txt
assets/: description_adjust.txt  description_edges.txt  description_gaussianFilter.txt  description_histeq.txt  description_impulseFilter.txt  description_noiseGen.txt  description_pixelFace.txt
cpp/: CMakeLists.txt  cpu_image_processor.cpp  cpu_image_processor.h  gpu_image_processor.cu  gpu_image_processor.cuh
views/: __init__.py  base_view.py  comparison_view.py  filter_view.py  gaussian_filter_view.py  histogram_view.py  image_adjustment_view.py  image_viewer.py  noise_generator_view.py  pixel_face_view.py  sobel_view.py  splash_screen.py  zoom_window.py
